--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
-[defaults]
-callback_plugins = plugins/callback
-stdout_callback = mask
+#[defaults]
+#callback_plugins = plugins/callback
+#stdout_callback = mask
 
 #[callback_mask]
 #sensitive_keywords = sops
