--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,8 @@
-#[defaults]
-#callback_plugins = plugins/callback
+[defaults]
+callback_plugins = plugins/callback
 #stdout_callback = mask
+awx_display_callback = mask
+
 
 #[callback_mask]
 #sensitive_keywords = sops
