--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 callback_plugins = plugins/callback
-#stdout_callback = mask
-awx_display_callback = mask
+stdout_callback = mask
+#awx_display_callback = mask
 
 
 #[callback_mask]
