add: new config

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
+callbacks_enabled = mask
 callback_plugins = plugins/callback
-stdout_callback = mask
+#stdout_callback = mask
 #awx_display_callback = mask
 
 
