add: callback changes

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 callbacks_enabled = mask
-callback_plugins = plugins/callback
-#stdout_callback = mask
+callback_plugins = callback_plugins
+stdout_callback = mask
 #awx_display_callback = mask
 
 
