--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 callbacks_enabled = mask
-callback_plugins = callback_plugins
-stdout_callback = mask
-#awx_display_callback = mask
+#callback_plugins = callback_plugins
+#stdout_callback = mask
+awx_display_callback = mask
 
 
 #[callback_mask]
