chg: callback type

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,9 @@
 [defaults]
 callbacks_enabled = mask
 #callback_plugins = callback_plugins
-stdout_callback = mask
+callback_whitelist = mask
+#stdout_callback = mask
 #awx_display_callback = stdout
-
 
 #[callback_mask]
 #sensitive_keywords = sops
